Separate itemize and enumerate global settings

--- a/metadata.tex
+++ b/metadata.tex
@@ -15,7 +15,7 @@
 
 % Useful packages
 \usepackage[export]{adjustbox}
-\usepackage{amsmath,amssymb}
+\usepackage{amsmath}
 \usepackage{array}
 \usepackage{caption}
 \usepackage[strict]{changepage}
@@ -68,7 +68,8 @@
 \setstretch{1}
 
 % Default margins for itemize lists
-\setlist[itemize,enumerate,2]{leftmargin=15pt, label=$\triangleright$}
+\setlist[itemize,2]{leftmargin=15pt, label=$\triangleright$}
+\setlist[enumerate,2]{leftmargin=15pt}
 
 % Get version from env
 % \getenv{variable_name} just prints the value
