Global settings for itemize/enumerate (#61)

--- a/metadata.tex
+++ b/metadata.tex
@@ -67,6 +67,10 @@
 \usepackage[skip=6pt, indent=0pt]{parskip}
 \setstretch{1}
 
+% Default margins for itemize lists
+\setlist[itemize,2]{leftmargin=15pt, label=$\triangleright$}
+\setlist[enumerate,2]{leftmargin=15pt}
+
 % Get version from env
 % \getenv{variable_name} just prints the value
 % \getenv[\macro]{variable_name} stores the value in \macro for reusability
