add Redwood Observatory

--- a/coops/barrow_down.tex
+++ b/coops/barrow_down.tex
@@ -56,7 +56,7 @@ if AI army kill you, you lost.
     \begin{itemize}
       \item Whenever a player visits an Obelisk, that player rolls one treasure die and one resource die, and resolves one of them.
       \item After defeating a level VII neutral army, in addition of resolving the tile don't make the turn 13 battle
-      
+      \item Whenever a player visits an Redwood Observatory, that player can place a map tile from their own supply of tiles OR rotate one tile without hero.
       \item After the end of EACH turn, a ghostly army attack you, see the AI rule book to know the units and cards AI use. (don't forget walls
       and arrows tower turn 7 and more.)
       \item At the start of battle versus ghostly army, you can keep your hand or draw again, like at the start of a round. Also reset your crowns.
