[PL] Bloody Grail

--- a/metadata.tex
+++ b/metadata.tex
@@ -148,7 +148,7 @@
 \definecolor{cadmiumgreen}{rgb}{0.0, 0.42, 0.24}
 \definecolor{camel}{rgb}{0.76, 0.6, 0.42}
 \definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
-\definecolor{darkcerulean}{rgb}{0.03, 0.27, 0.49}
+\definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
 \definecolor{goldenbrown}{rgb}{0.6, 0.4, 0.08}
 
 % Command to frame images
@@ -471,14 +471,14 @@
 
 \clearpage
 
-\include{coops/main.tex}
+% \include{coops/main.tex}
 
 \include{clash/main.tex}
 
-\include{campaigns/main.tex}
+% \include{campaigns/main.tex}
 
-\include{\sections/credits.tex}
+% \include{\sections/credits.tex}
 
-\include{sections/back_cover.tex}
+% \include{sections/back_cover.tex}
 
 \end{document}
