--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-16 16:56+0200\n"
+"POT-Creation-Date: 2024-07-17 22:18+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -66,12 +66,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:34 clash/bloody_grail.tex:31
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} Brak\n"
+"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -81,6 +81,8 @@ msgid ""
 "\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-grail."
 "png}"
 msgstr ""
+"\\addscenariosection{1}{Tryb Starcia}{Krwawy Graal}{\\images/bloody-grail."
+"png}"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:7
@@ -89,6 +91,8 @@ msgid ""
 "\\textbf{Author:} Re4XN\n"
 "\n"
 msgstr ""
+"\\textbf{Autor:} Re4XN\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:9
@@ -97,6 +101,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1239631918643941509}{Archon Studios Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Źródło:} \\href{https://discord.com/channels/740870068178649108/1239631918643941509}{Discord Archon Studio}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:11
@@ -105,6 +111,8 @@ msgid ""
 "\\textit{A lady clad in dark robes visits you in your dreams, offering you a golden chalice filled with blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}\n"
 "\n"
 msgstr ""
+"\\textit{Dama odziana w ciemne szaty odwiedza cię w snach, oferując złoty kielich wypełniony krwistoczerwonym winem. Budząc się zlany zimnym potem, postanawiasz wyruszyć na wyprawę, by znaleźć ten przeklęty artefakt.}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:14
@@ -114,6 +122,9 @@ msgid ""
 "This scenario is played over 13 rounds.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
+"Ten scenariusz rozgrywany jest w 13 rundach.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:17
@@ -123,6 +134,9 @@ msgid ""
 "\\textbf{Player Count:} 2 or 4\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Graczy}}\n"
+"\\textbf{Liczba Graczy:} 2 lub 4\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:20
@@ -132,6 +146,9 @@ msgid ""
 "\\resources{13}{2}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Zasoby Początkowe:}\\par\n"
+"\\resources{13}{2}{1}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:23 campaigns/inferno_devilish_plan.tex:32
@@ -252,16 +269,27 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:73
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{\\nth{6}, \\nth{9} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
 "  \\item Remove all Black cubes from every Water Wheel and Windmill on the map.\n"
-"  \\item All players possessing the title of ``\\textcolor{darkcerulean}{Grail Knight}'' gain \\svg{morale_positive}.\n"
+"  \\item All players possessing the title of ``\\textcolor{cobalt}{Grail Knight}'' gain \\svg{morale_positive}.\n"
 "  \\item All players who do not possess a title gain 2 \\svg{morale_negative}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Rundy 4., 8. i 12.:}\n"
+"\\begin{itemize}\n"
+"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Mistycznego Ogródu na mapie.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:76
@@ -314,12 +342,12 @@ msgid ""
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
 "  \\item A player that chooses \\textbf{Sacrifice} at an Obelisk gains the title of ``\\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red faction cube on their Hero portrait to mark this effect. A \\textcolor{darkcandyapplered}{Blood Knight} may never choose the \\textbf{Cleanse} option when Visiting an Obelisk.\n"
-"  \\item A player that chooses \\textbf{Cleanse} at an Obelisk gains the title of ``\\textcolor{darkcerulean}{Grail Knight}.'' Place a blue faction cube on their Hero portrait to mark this effect. A \\textcolor{darkcerulean}{Grail Knight} may never choose the \\textbf{Sacrifice} option when Visiting an Obelisk.\n"
+"  \\item A player that chooses \\textbf{Cleanse} at an Obelisk gains the title of ``\\textcolor{cobalt}{Grail Knight}.'' Place a blue faction cube on their Hero portrait to mark this effect. A \\textcolor{cobalt}{Grail Knight} may never choose the \\textbf{Sacrifice} option when Visiting an Obelisk.\n"
 "  \\item When a player chooses \\textbf{Sacrifice} at an Obelisk, place a number of faction cubes on the sacrificed Unit card and on the Obelisk field equivalent to the number of times the player has chosen the \\textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 faction cubes on the Unit card and 2 faction cubes on the Obelisk field.\n"
-"  \\item A player who possesses the title of ``\\textcolor{darkcerulean}{Grail Knight}'' may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.\n"
+"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.\n"
 "  \\item If a Unit recruited at an Obelisk is defeated, Remove it.\n"
 "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.\n"
-"  \\item A player who possesses the title of ``\\textcolor{darkcerulean}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral Azure Units.\n"
+"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral Azure Units.\n"
 "  \\item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.\n"
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their faction Town.\n"
 "  \\item Ignore Combat encounters on the field with the Grail.\n"
@@ -331,8 +359,8 @@ msgid ""
 "  \\item If a Neutral army defeats the Hero with the Grail token, the Grail token is placed on the field where the Hero was defeated.\n"
 "  \\item If a Hero with the Grail token casts Town Portal or uses the Inferno faction Castle Gate building, the Grail token is placed on the hex where the spell was cast or the building used.\n"
 "  \\item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \\svg{damage-red} from your units and assign it to enemy units.''\n"
-"  \\item A Hero with the Grail token who possesses the title of ``\\textcolor{darkcerulean}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.\n"
-"  \\item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat round, if the Hero is a \\textcolor{darkcerulean}{Grail Knight}, discard a card to remove up to 2 \\svg{damage-red} from your units.''\n"
+"  \\item A Hero with the Grail token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.\n"
+"  \\item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a card to remove up to 2 \\svg{damage-red} from your units.''\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
