--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -210,12 +210,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:34 clash/bloody_grail.tex:31
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} Brak\n"
+"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko\n"
 "\n"
 
 #. type: multicols*
