Finish translating Bloody Grail

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -103,7 +103,7 @@ During this scenario:
   \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.
   \item If a Unit recruited at an Obelisk is defeated, Remove it.
   \item A player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
-  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral Azure Units.
+  \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral \svgunit{azure} Units.
   \item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.
   \item Players can use their Deck of Might \& Magic when paying gold to defend their faction Town.
   \item Ignore Combat encounters on the field with the Grail.
