--- a/metadata.tex
+++ b/metadata.tex
@@ -471,14 +471,14 @@
 
 \clearpage
 
-% \include{coops/main.tex}
+\include{coops/main.tex}
 
 \include{clash/main.tex}
 
-% \include{campaigns/main.tex}
+\include{campaigns/main.tex}
 
-% \include{\sections/credits.tex}
+\include{\sections/credits.tex}
 
-% \include{sections/back_cover.tex}
+\include{sections/back_cover.tex}
 
 \end{document}
