--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-17 22:18+0200\n"
+"POT-Creation-Date: 2024-07-18 11:20+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -294,7 +294,7 @@ msgid ""
 "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.\n"
 "  \\item If a Unit recruited at an Obelisk is defeated, Remove it.\n"
 "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.\n"
-"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral Azure Units.\n"
+"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral \\svgunit{azure} Units.\n"
 "  \\item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.\n"
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their faction Town.\n"
 "  \\item Ignore Combat encounters on the field with the Grail.\n"
