--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-17 22:18+0200\n"
+"POT-Creation-Date: 2024-07-18 11:20+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -165,14 +165,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:29
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item A Pack of \\svg{bronze} units of your choice.\n"
-#| "  \\item A Few \\svg{bronze} units of your choice.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -183,8 +176,8 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Grupa \\svg{bronze} jednostek do wyboru.\n"
-"  \\item Garstka \\svg{bronze} jednostek do wyboru.\n"
+"  \\item Garstka \\svg{bronze} jednostek o \\textit{najwyższym} koszcie rekrutacji\n"
+"  \\item Grupa \\svg{bronze} jednostek o \\textit{najniższym} koszcie rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -195,6 +188,8 @@ msgid ""
 "\\textbf{Map tile Pool:} Each player takes 2 random Far (II--III) Map tiles, one of which must contain a Settlement\n"
 "\n"
 msgstr ""
+"\\textbf{Pula Kafelków Mapy:} Każdy gracz bierze 2 losowe Dalekie (II--III) Kafelki Mapy, z których jeden musi zawierać Osadę\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:38
@@ -204,6 +199,9 @@ msgid ""
 "Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
+"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy scenariusza:\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:46
@@ -218,6 +216,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Dla scenariusza dwuosobowego:}\n"
+"\\begin{itemize}\n"
+"  \\item 2 × Początkowy (I) Kafelek Mapy\n"
+"  \\item 4 × Bliski (IV--V) Kafelek Mapy, z których każdy musi zawierać Obelisk\n"
+"  \\item 4 × Daleki (II--III) Kafelek Mapy, z których 2 muszą zawierać Osadę\n"
+"  \\item 1 × Centralny (VI--VII) Kafelek Mapy, który musi zawierać pole Graala\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:54
@@ -232,6 +238,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Dla scenariusza czetroosobowego:}\n"
+"\\begin{itemize}\n"
+"  \\item 4 × Początkowy (I) Kafelek Mapy\n"
+"  \\item 6 × Bliski (IV--V) Kafelek Mapy, z których 4 muszą zawierać Obelisk\n"
+"  \\item 8 × Daleki (II--III) Kafelek Mapy, z których 4 muszą zawierać Osadę\n"
+"  \\item 1 × Centralny (VI--VII) Kafelek Mapy, który musi zawierać pole Graala\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:56
@@ -240,6 +254,8 @@ msgid ""
 "\\textbf{\\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.\n"
 "\n"
 msgstr ""
+"\\textbf{\\MakeUppercase{Uwaga:}} Przed umieszczeniem Bliskich kafelków, podziel je na 2 stosy (z Obeliskiem i bez). Umieszczaj je naprzemiennie, aby Kafelki z Obeliskiem nie były umieszczane obok siebie.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:59
@@ -249,6 +265,9 @@ msgid ""
 "To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Zwycięstwa}}\n"
+"Zdobądź Żeton Graala i przynieść go do Miasta swojej Frakcji.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:62
@@ -258,6 +277,9 @@ msgid ""
 "If the Grail is not obtained at least once by the end of the \\nth{13} round, the game ends, and all players lose the scenario.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Przegranej}}\n"
+"Jeśli Graal nie zostanie zdobyty przynajmniej raz do końca 13. rundy, gra się kończy, a wszyscy gracze przegrywają scenariusz.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:64
@@ -266,16 +288,12 @@ msgid ""
 "If the Grail token has been obtained, the players gain additional time (until the end of the \\nth{16} round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.\n"
 "\n"
 msgstr ""
+"Jeśli token Graala został zdobyty, gracze zyskują dodatkowy czas (do końca 16. rundy), aby przynieść Graal do Miasta swojej Frakcji. W przeciwnym razie wszyscy gracze przegrywają scenariusz.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:73
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{6}, \\nth{9} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -285,9 +303,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Rundy 4., 8. i 12.:}\n"
+"\\textbf{Rundy 6., 9. i 12.:}\n"
 "\\begin{itemize}\n"
-"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Mistycznego Ogródu na mapie.\n"
+"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka i Młyna Wodnego na mapie.\n"
+"  \\item Wszyscy gracze posiadający tytuł ``\\textcolor{cobalt}{Rycerza Graala}'' zyskują \\svg{morale_positive}.\n"
+"  \\item Wszyscy gracze, którzy nie posiadają tytułu, otrzymują 2 \\svg{morale_negative}.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -299,6 +319,9 @@ msgid ""
 "Before this scenario:\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
+"Przed rozpoczęciem scenariusza:\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:80
@@ -309,6 +332,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Podziel talię Artefaktów według rzadkości na 3 osobne talie (Słabe, Mocne i Relikty). Gracz może zdobywać tylko Słabe Artefakty na Początkowych lub Dalekich Kafelkach, Słabe lub Mocnej Artefakty na Bliskich Kafelkach, oraz Mocne lub Relikty na Centralnych Kafelkach.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:82 clash/the_hunt.tex:83
@@ -347,7 +374,7 @@ msgid ""
 "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.\n"
 "  \\item If a Unit recruited at an Obelisk is defeated, Remove it.\n"
 "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.\n"
-"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral Azure Units.\n"
+"  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral \\svgunit{azure} Units.\n"
 "  \\item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.\n"
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their faction Town.\n"
 "  \\item Ignore Combat encounters on the field with the Grail.\n"
@@ -364,6 +391,45 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Kiedy gracz odwiedza Obelisk, \\textit{musi} wybrać jeden z następujących efektów:\n"
+"  \\begin{enumerate}[leftmargin=15pt]\n"
+"    \\item \\textbf{[Oczyszczenie]} Gracz otrzymuje jedną z korzyści, w zależności od liczby odwiedzonych Obelisków:\n"
+"    \\begin{enumerate}\n"
+"      \\item \\textbf{[1. Obelisk]} Rzuć 2 \\svg{treasure} i rozpatrz 1; następnie otrzymaj \\svg{morale_negative}.\n"
+"      \\item \\textbf{[2. Obelisk]} Zwiększ swoje dochody \\svg{gold}, \\svg{building_materials}, lub \\svg{valuables} o 1 krok.\n"
+"      \\item \\textbf{[3. Obelisk]} Zyskujesz Pomocnizego Bohatera. Umieść jego figurkę na tym polu. Jeśli już masz Pomocniczego Bohatera, zyskaj 3 \\svg{gold}. Następnie wybierz wrogiego gracza, aby odrzucił 2 losowe karty ze swojej ręki.\n"
+"      \\item \\textbf{[4. Obelisk]} Usuń do 4 kart ze swojej ręki, z wyjątkiem kart Statystyk; następnie przeszukaj każdą odpowiednią talię i wybierz kartę, którą dodasz do swojej ręki.\n"
+"    \\end{enumerate}\n"
+"    \\item \\textbf{[Ofiara]} Usuń * kartę jednostki frakcji ze swojej talii jednostek w zamian za:\n"
+"    \\begin{enumerate}\n"
+"      \\item *\\svgunit{bronze}: Zyskaj 6 \\svg{gold}, 3 \\svg{building_materials} i 1 \\svg{valuables}. Dodatkowo, jeśli karta jednostki była na stronie Grupy, \\textbf{Przeszukaj (4)} talię Słabych Artefaktów.\n"
+"      \\item *\\svgunit{silver}: Zyskaj 12 \\svg{gold}, 6 \\svg{building_materials} i 2 \\svg{valuables}. Dodatkowo, jeśli karta jednostki była na stronie Grupy, \\textbf{Przeszukaj (3)} talię Mocnych Artefaktów.\n"
+"      \\item *\\svgunit{golden}: Zyskaj 18 \\svg{gold}, 9 \\svg{building_materials} i 3 \\svg{valuables}. Dodatkowo, \\textbf{Przeszukaj (2)} talię Reliktów. Jeśli karta jednostki była na stronie Grupy, \\textbf{Przeszukaj (2)} talię jednostek \\svgunit{azure}; możesz zrekrutować jedną z tych jednostek za połowę kosztu (zaokrąglonego w dół).\n"
+"    \\end{enumerate}\n"
+"  \\end{enumerate}\n"
+"  \\item Gracz, który wybierze \\textbf{Ofiarę} przy Obelisku, zyskuje tytuł ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}''. Umieść czerwoną kostkę frakcji na portrecie swojego Bohatera, aby oznaczyć ten efekt. \\textcolor{darkcandyapplered}{Rycerz Krwi} nigdy nie może wybrać opcji \\textbf{Oczyszczenia} podczas Odwiedzania Obelisku.\n"
+"  \\item Gracz, który wybiera \\textbf{Oczyszczenie} przy Obelisku, zyskuje tytuł ,,\\textcolor{cobalt}{Rycerza Graala}''. Umieść niebieską kostkę frakcji na portrecie swojego Bohatera, aby oznaczyć ten efekt. \\textcolor{cobalt}{Rycerz Graala} nigdy nie może wybrać opcji \\textbf{Ofiary} podczas Odwiedzania Obelisku.\n"
+"  \\item Kiedy gracz wybiera \\textbf{Ofiarę} przy Obelisku, umieść liczbę kostek frakcji równą liczbie razy, kiedy gracz składał \\textbf{Ofiarę}, na karcie jednostki i na polu Obelisku. Na przykład jeśli gracz składa ofiarę po raz drugi, umieść 2 kostki frakcji na karcie jednostki i 2 kostki frakcji na polu Obelisku.\n"
+"  \\item Gracz posiadający tytuł ,,\\textcolor{cobalt}{Rycerza Graala}'' może po Odwiedzeniu Obelisku zrekrutować wrogą jednostkę ofiarowaną przy tym Obelisku za połowę kosztu (zaokrąglonego w dół); jeśli została ofiarowany Grupa, gracz może zrekrutować Garstkę.\n"
+"  \\item Jeśli zrekrutowana przy Obelisku jednostka zostanie pokonana, usuń ją z gry.\n"
+"  \\item Gracz, który nie posiada tytułu lub posiada tytuł ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}'', nie może używać karty Dyplomacji. Jeśli gracz, który nie posiada tytułu lub posiada tytuł ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}'', dobierze kartę Dyplomacji, może ją pokazać innym graczom, następnie odrzucić i wylosować nową kartę Zdolności.\n"
+"  \\item Gracz posiadający tytuł ,,\\textcolor{cobalt}{Rycerza Graala}'' nie może używać karty Dyplomacji do rekrutacji \\svgunit{azure} Jednostek Neutralnych.\n"
+"  \\item Kiedy wylosowana zostanie karta Astrologowie Ogłaszają lub karta Wydarzenia, która pozwala na rekrutację Jednostek Neutralnych, zignoruj ją i wylosuj nową kartę Astrologowie Ogłaszają lub kartę Wydarzenia.\n"
+"  \\item Gracze mogą używać swojej Talii Mocy i Magii, gdy płacą złoto za obronę Miasta swojej Frakcji.\n"
+"  \\item Zignoruj walkę z Jednostkami Neutralnymi na polu z Graalem.\n"
+"  \\item Gracze nie mogą odwiedzać pola z żetonem Graala, chyba że wcześniej odwiedzili co najmniej dwa Obeliski lub żeton Graala został zdobyty przez jakiegokolwiek Bohatera przynajmniej raz.\n"
+"  \\item Aby zdobyć żeton Graala, Bohater musi wydać 2 punkty ruchu na polu z Graalem.\n"
+"  \\item Jeśli gracz nie posiada tytułu ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}'', musi usunąć kartę Jednostki Frakcji ze swojej talii Jednostek natychmiast po zdobyciu żetonu Graala. Ten efekt występuje tylko raz na gracza.\n"
+"  \\item Jeśli inny Bohater pokona Bohatera z żetonem Graala, wygrany przechwytuje żeton.\n"
+"  \\item Jeśli Bohater z żetonem Graala podda się, żeton Graala zostaje umieszczony na polu, na którym Bohater się poddał.\n"
+"  \\item Jeśli neutralna armia pokona Bohatera z żetonem Graala, żeton Graala zostaje umieszczony na polu, na którym Bohater został pokonany.\n"
+"  \\item Jeśli Bohater z żetonem Graala rzuci zaklęcie Magiczny Portal lub użyje budynku Wrót Wymiarów frakcji Inferno, żeton Graala zostaje umieszczony na polu, na którym rzucił zaklęcie lub użył budynku.\n"
+"  \\item Żeton Graala zachowuje się jak karta Długotrwała, która nie liczy się do limitu kart na ręce i nie może być odrzucona; zapewnia następujący efekt po zagraniu: ``$\\infty$ Raz na każdą rundę walki, jeśli Bohater jest \\textcolor{darkcandyapplered}{Rycerzem Krwi}, odrzuć kartę, aby usunąć do 2 \\svg{damage-red} z twoich jednostek i przypisać je wrogim jednostkom.''\n"
+"  \\item Bohater z żetonem Graala, który posiada tytuł ,,\\textcolor{cobalt}{Rycerza Graala}'', może zapłacić 10 \\svg{gold} lub 3 \\svg{valuables} na dowolnym polu Świątyni, aby oczyścić Graal. Umieść niebieską kostkę frakcji na żetonie Graala, aby oznaczyć ten efekt.\n"
+"  \\item Po oczyszczeniu żeton Graala zachowuje się jak karta Stała, która nie liczy się do limitu kart na ręce i nie może być odrzucona; zapewnia następujący efekt po zagraniu: ``$\\infty$ Raz na każdą rundę walki, jeśli Bohater jest \\textcolor{cobalt}{Rycerzem Graala}, odrzuć kartę, aby usunąć do 2 \\svg{damage-red} z twoich jednostek.''\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:127
@@ -386,3 +452,9 @@ msgid ""
 "  \\node at (12.1, -14) {\\includegraphics[scale=0.165]{\\_assets/maps/bloody-grail-4p.png}};\n"
 "  \\node at (12.1, -21.6) {\\footnotesize{\\textbf{\\MakeUppercase{4-PLAYER SCENARIO}}}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (4.5, -5) {\\includegraphics[scale=0.165]{\\_assets/maps/bloody-grail-2p.png}};\n"
+"  \\node at (4.5, -10) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIUSZ DWUOSOBOWY}}}};\n"
+"  \\node at (12.1, -14) {\\includegraphics[scale=0.165]{\\_assets/maps/bloody-grail-4p.png}};\n"
+"  \\node at (12.1, -21.6) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIUSZ CZTEROSOBOWY}}}};"
