--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -347,7 +347,7 @@ msgstr ""
 "    \\item Będąc w mieście innego gracza, możesz rekrutować lub wzmacniać ich jednostki, albo dla nich, albo dla siebie. Potrzebujesz na to zgody innego gracza. Odpowiednie Siedliska lub Cytadela muszą być zbudowane.\n"
 "    \\item Do ostatniej walki o Kopalnię/Osadę dodaj Neutralną \\svgunit{golden} Jednostkę. Masz nieograniczoną liczbę rund na tę walkę. Nie możesz użyć Mistrzowskiej Dyplomacji, aby pominąć tę walkę!\n"
 "    \\item Przy pierwszym osiągnięciu poziomu IV, zdobądź swoją drugą specjalizację.\n"
-"    \\item Po osiągnięciu poziomu IV, przenieś swój token na liczniku poziomu na poziom III.\n"
+"    \\item Po osiągnięciu poziomu IV, przenieś swoją kostkę na liczniku poziomów na poziom III.\n"
 "    \\item Dodatkowo, żaden gracz nie może:\n"
 "    \\begin{itemize}\n"
 "        \\item Atakować innych bohaterów.\n"
