--- a/metadata.tex
+++ b/metadata.tex
@@ -148,7 +148,7 @@
 \definecolor{cadmiumgreen}{rgb}{0.0, 0.42, 0.24}
 \definecolor{camel}{rgb}{0.76, 0.6, 0.42}
 \definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
-\definecolor{darkcerulean}{rgb}{0.03, 0.27, 0.49}
+\definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
 \definecolor{goldenbrown}{rgb}{0.6, 0.4, 0.08}
 
 % Command to frame images
