--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -57,6 +57,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Časované Události}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:93 clash/the_hunt.tex:74
@@ -84,6 +86,8 @@ msgid ""
 "\\textbf{Additional Bonus:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Dodatečný Bonus:} Žádný\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:82 clash/the_hunt.tex:83
@@ -92,6 +96,8 @@ msgid ""
 "During this scenario:\n"
 "\n"
 msgstr ""
+"Během tohoto scénáře:\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
