--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -39,6 +39,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Časované Události}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:149 coops/titans_stronghold.tex:105
@@ -58,6 +60,8 @@ msgid ""
 "\\textbf{Additional Bonus:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Dodatečný Bonus:} Žádný\n"
+"\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:34 clash/bloody_grail.tex:31
@@ -66,6 +70,8 @@ msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
 "\n"
 msgstr ""
+"\\textbf{Městské Budovy:} \\svgunit{bronze} Obydlí\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
@@ -73,7 +79,7 @@ msgstr ""
 msgid ""
 "\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-grail."
 "png}"
-msgstr ""
+msgstr "\\addscenariosection{1}{Střet}{Krvavý Grál}{\\images/bloody-grail.png}"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:7
@@ -90,6 +96,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1239631918643941509}{Archon Studios Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Zdroj:} \\href{https://discord.com/channels/740870068178649108/1239631918643941509}{Archon Studio Discord}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:11
@@ -98,6 +106,8 @@ msgid ""
 "\\textit{A lady clad in dark robes visits you in your dreams, offering you a golden chalice filled with blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}\n"
 "\n"
 msgstr ""
+"\\textit{Dáma oblečená v tmavých róbách vás navštíví ve snech a nabízí vám zlatý kalich naplněný krvavě červeným vínem. Probouzejíce se ve studeném potu, rozhodnete se vydat na výpravu za tímto pekelným artefaktem.}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:14
@@ -107,6 +117,9 @@ msgid ""
 "This scenario is played over 13 rounds.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Délka Scénáře}}\n"
+"Tento scénář se hraje na 13 kol.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:17
@@ -116,6 +129,9 @@ msgid ""
 "\\textbf{Player Count:} 2 or 4\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Hráče}}\n"
+"\\textbf{Počet Hráčů:} 2 nebo 4\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:20
@@ -125,6 +141,9 @@ msgid ""
 "\\resources{13}{2}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Suroviny:}\\par\n"
+"\\resources{13}{2}{1}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:23 campaigns/inferno_devilish_plan.tex:32
@@ -135,6 +154,9 @@ msgid ""
 "\\resources{10}{0}{0}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Příjem:}\\par\n"
+"\\resources{10}{0}{0}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:29
@@ -147,6 +169,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Jednotky:}\n"
+"\\begin{itemize}\n"
+"  \\item Málo \\svgunit{bronze} jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Skupinu \\svgunit{bronze} jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:33
@@ -155,6 +183,8 @@ msgid ""
 "\\textbf{Map tile Pool:} Each player takes 2 random Far (II--III) Map tiles, one of which must contain a Settlement\n"
 "\n"
 msgstr ""
+"\\textbf{Dílky Mapy na ruce:} Každý hráč si vezme 2 náhodné Vzdálené (II--III) Dílky Mapy, z nichž jeden musí obsahovat Osadu\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:38
@@ -164,6 +194,9 @@ msgid ""
 "Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Mapy}}\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:46
@@ -178,6 +211,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Scénář pro 2 hráče:}\n"
+"\\begin{itemize}\n"
+"  \\item 2 × Startovní (I) Dílek Mapy\n"
+"  \\item 4 × Blízký (IV--V) Dílek Mapy, všechny musí obsahovat Obelisk\n"
+"  \\item 4 × Vzdálený (II--III) Dílek Mapy, z nichž 2 musí obsahovat Osadu\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy, který musí obsahovat pole s Grálem\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:54
@@ -192,6 +233,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Scénář pro 4 hráče:}\n"
+"\\begin{itemize}\n"
+"  \\item 4 × Startovní (I) Dílek Mapy\n"
+"  \\item 6 × Blízký (IV--V) Dílek Mapy, z nichž 4 musí obsahovat Obelisk\n"
+"  \\item 8 × Vzdálený (II--III) Dílek Mapy, z nichž 4 musí obsahovat Osadu\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy, který musí obsahovat pole s Grálem\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:56
@@ -200,6 +249,8 @@ msgid ""
 "\\textbf{\\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.\n"
 "\n"
 msgstr ""
+"\\textbf{\\MakeUppercase{Poznámka:}} Před umístěním Blízkých Dílků je rozdělte do 2 hromádek (s Obeliskem a bez Obelisku). Umísťujte je střídavě tak, aby dílky s Obeliskem nebyly umístěny vedle sebe.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:59
@@ -209,6 +260,9 @@ msgid ""
 "To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Podmínky Vítězství}}\n"
+"Aby Hrdina vyhrál scénář, musí získat žeton Grálu a přinést jej do Města své frakce.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:62
@@ -218,6 +272,9 @@ msgid ""
 "If the Grail is not obtained at least once by the end of the \\nth{13} round, the game ends, and all players lose the scenario.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Podmínky Porážky}}\n"
+"Pokud Grál není získán alespoň jednou do konce 13. kola, hra končí a všichni hráči prohrávají tento scénář.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:64
@@ -226,6 +283,8 @@ msgid ""
 "If the Grail token has been obtained, the players gain additional time (until the end of the \\nth{16} round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.\n"
 "\n"
 msgstr ""
+"Pokud byl žeton Grálu získán, hráči získají dodatečný čas (do konce 16. kola) na to, aby přinesli Grál do Města své frakce. V opačném případě všichni hráči prohrávají tento scénář.\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:73
@@ -239,6 +298,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{6., 9. a 12. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Odstraňte všechny černé kostky ze všech Vodních Kol a Větrných Mlýnů na mapě.\n"
+"  \\item Všichni hráči, kteří vlastní titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, získají \\svg{morale_positive}.\n"
+"  \\item Všichni hráči, kteří nevlastní žádný titul, získají 2 \\svg{morale_negative}.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:76
@@ -248,6 +314,9 @@ msgid ""
 "Before this scenario:\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
+"Před tímto scénářem:\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:80
@@ -258,6 +327,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Rozdělte balíček Artefaktů podle vzácnosti na 3 samostatné balíčky (Menší, Větší a Relikvie). Hráč může získat pouze Menší Artefakty na Startovních nebo Vzdálených dílcích, Menší nebo Větší Artefakty na Blízkých dílcích a Větší nebo Relikvie na Středových dílcích.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:82 clash/the_hunt.tex:83
@@ -266,6 +339,8 @@ msgid ""
 "During this scenario:\n"
 "\n"
 msgstr ""
+"Během tohoto scénáře:\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:121
@@ -311,6 +386,45 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Když hráč Navštíví Obelisk, musí vyřešit jeden z následujících efektů:\n"
+"  \\begin{enumerate}\n"
+"    \\item \\textbf{[Očištění]} Hráč obdrží jednu z následujících výhod, v závislosti na počtu Navštívených Obelisků:\n"
+"    \\begin{enumerate}\n"
+"      \\item \\textbf{[1. Obelisk]} Hoďte 2 \\svg{treasure} a vyberte 1 k vyřešení; poté získejte \\svg{morale_negative}.\n"
+"      \\item \\textbf{[2. Obelisk]} Zvyšte svůj příjem \\svg{gold}, \\svg{building_materials}, nebo \\svg{valuables} o 1 krok.\n"
+"      \\item \\textbf{[3. Obelisk]} Získáte Vedlejšího Hrdinu. Umístěte jeho model na toto pole. Pokud již Vedlejšího Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné karty ze své ruky.\n"
+"      \\item \\textbf{[4. Obelisk]} Odstraňte až 4 karty ze své ruky, s výjimkou Karet Statistik; poté vyhledejte v každém odpovídajícím balíčku kartu dle vašeho výběru a vložte ji do své ruky.\n"
+"    \\end{enumerate}\n"
+"    \\item \\textbf{[Oběť]} Odstraňte kartu Jednotky své frakce z vašeho balíčku Jednotek výměnou za:\n"
+"    \\begin{enumerate}\n"
+"      \\item *\\svgunit{bronze}: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (4)} v balíčku Menších Artefaktů.\n"
+"      \\item *\\svgunit{silver}: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (3)} v balíčku Větších Artefaktů.\n"
+"      \\item *\\svgunit{golden}: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v balíčku karet Relikvií. A nakonec, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (2)} v balíčku \\svgunit{azure} Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
+"    \\end{enumerate}\n"
+"  \\end{enumerate}\n"
+"  \\item Hráč, který si zvolí \\textbf{Oběť} u Obelisku, získá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}. Umístěte červenou frakční kostku na portrét jejich Hrdiny, aby byl tento efekt označen. \\textcolor{darkcandyapplered}{Krvavý Rytíř} nikdy nesmí zvolit možnost \\textbf{Očištění} při Navštěvování Obelisku.\n"
+"  \\item Hráč, který si zvolí \\textbf{Očištění} u Obelisku, získá titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}.} Umístěte modrou frakční kostku na portrét jejich Hrdiny, aby byl tento efekt označen. \\uv{\\textcolor{cobalt}{Rytíř Grálu}} nikdy nesmí zvolit možnost \\textbf{Oběť} při Navštěvování Obelisku.\n"
+"  \\item Když hráč zvolí \\textbf{Oběť} u Obelisku, umístěte počet frakčních kostek na obětovanou kartu Jednotky a na pole Obelisku ekvivalentní počtu, kolikrát hráč zvolil možnost \\textbf{Oběť}. Například, pokud hráč obětuje podruhé, umístěte 2 frakční kostky na kartu Jednotky a 2 frakční kostky na pole Obelisku.\n"
+"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Skupina, hráč může místo toho zvolit naverbovat Málo.\n"
+"  \\item Pokud je Jednotka naverbovaná u Obelisku poražena, Odstraňte ji.\n"
+"  \\item Hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, nemůže použít kartu Dovednosti Diplomacie. Pokud hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, vytáhne kartu Dovednosti Diplomacie, může ji ukázat ostatním hráčům, poté ji odhodit a místo ní si vzít novou kartu Dovednosti.\n"
+"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
+"  \\item Kdykoli je vytažena karta Prohlášení Astrologů nebo karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte kartu novou.\n"
+"  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své frakce.\n"
+"  \\item Ignorujte střety v Boji na poli s Grálem.\n"
+"  \\item Hráči nemohou Navštívit pole se žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
+"  \\item Aby hráč získal žeton Grálu, musí jeho Hrdina zaplatit 2 MP na poli s Grálem.\n"
+"  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání žetonu Grálu odstranit kartu Jednotky své frakce z balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
+"  \\item Pokud jiný Hrdina porazí Hrdinu s žetonem Grálu, také získá žeton Grálu.\n"
+"  \\item Pokud se Hrdina s žetonem Grálu vzdá, žeton Grálu je umístěn na pole, kde se Hrdina vzdal.\n"
+"  \\item Pokud Neutrální armáda porazí Hrdinu s žetonem Grálu, žeton Grálu je umístěn na pole, kde byl Hrdina poražen.\n"
+"  \\item Pokud Hrdina s žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána frakce Peklo, žeton Grálu je umístěn na pole, kde byl vyvolán kouzlo nebo použita budova.\n"
+"  \\item Žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Boje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich jednotek a přidělili je nepřátelským jednotkám.}\n"
+"  \\item Hrdina s žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoli místě chrámové mapy, aby očistil Grál. Umístěte modrou frakční kostku na žeton Grálu, aby byl tento efekt označen.\n"
+"  \\item Jakmile je Grál očištěn, žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého kola Boje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich jednotek.}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: clash/bloody_grail.tex:127
@@ -333,3 +447,9 @@ msgid ""
 "  \\node at (12.1, -14) {\\includegraphics[scale=0.165]{\\_assets/maps/bloody-grail-4p.png}};\n"
 "  \\node at (12.1, -21.6) {\\footnotesize{\\textbf{\\MakeUppercase{4-PLAYER SCENARIO}}}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (4.5, -5) {\\includegraphics[scale=0.165]{\\_assets/maps/bloody-grail-2p.png}};\n"
+"  \\node at (4.5, -10) {\\footnotesize{\\textbf{\\MakeUppercase{SCÉNÁŘ PRO 2 HRÁČE}}}};\n"
+"  \\node at (12.1, -14) {\\includegraphics[scale=0.165]{\\_assets/maps/bloody-grail-4p.png}};\n"
+"  \\node at (12.1, -21.6) {\\footnotesize{\\textbf{\\MakeUppercase{SCÉNÁŘ PRO 4 HRÁČE}}}};"
