--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -23,6 +23,8 @@ msgid ""
 "\\addscenariosection{1}{Cooperative scenario}{Sentinels}{\\images/sentinel."
 "png}"
 msgstr ""
+"\\addscenariosection{1}{Kooperativní scéná\\v{r}}{Strážci}{\\images/sentinel."
+"png}"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -43,6 +45,8 @@ msgid ""
 "\\textbf{Author:} silence70011\n"
 "\n"
 msgstr ""
+"\\textbf{Autor:} silence70011\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:9
@@ -51,6 +55,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Zdroj:} \\href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:14
@@ -62,6 +68,10 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
+"\\textit{Existuje svět mimo ten náš, plný bestií a monster, sotva držený formací čtyř posvátných Obelisků.\n"
+"  Ale síla těchto kamenů slábne a průlom je nevyhnutelný.\n"
+"  Když to nastane, jen vy a váš spojenec budete stát mezi hordami a úplným zničením těchto zemí.\n"
+"}\n"
 
 #. type: multicols
 #: coops/sentinels.tex:16
@@ -70,6 +80,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Délka Scénáře}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:18
@@ -78,6 +90,8 @@ msgid ""
 "This scenario is played over 12 rounds.\n"
 "\n"
 msgstr ""
+"Tento scénář se hraje na 12 kol.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:20
@@ -86,6 +100,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Hráče}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:22
@@ -94,6 +110,8 @@ msgid ""
 "\\textbf{Player Count:} 2\n"
 "\n"
 msgstr ""
+"\\textbf{Počet Hráčů:} 2\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:25
@@ -103,6 +121,9 @@ msgid ""
 "\\resources{10}{2}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Suroviny:}\\par\n"
+"\\resources{10}{2}{1}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:28 coops/titans_stronghold.tex:29 clash/the_hunt.tex:25
@@ -112,6 +133,9 @@ msgid ""
 "\\resources{10}{2}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Příjem:}\\par\n"
+"\\resources{10}{2}{1}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:34
@@ -124,6 +148,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Jednotky:}\n"
+"\\begin{itemize}\n"
+"  \\item Skupinu \\svgunit{bronze} jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Málo \\svgunit{bronze} jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:36
@@ -132,6 +162,8 @@ msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, Citadel\n"
 "\n"
 msgstr ""
+"\\textbf{Budovy ve Městě:} \\svgunit{bronze} Obydlí, Citadela\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:38
@@ -140,6 +172,8 @@ msgid ""
 "\\textbf{Map tile Pool:} Each player takes 1 random Near (IV--V) Map tile and 1 random Far (II--III) Map tile. These tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
+"\\textbf{Dílky Mapy na ruce:} Každý hráč si vezme 1 náhodný Blízký (IV--V) Dílek Mapy a 1 náhodný Vzdálený (II--III) Dílek Mapy. Tyto dílky by neměly obsahovat žádné Obelisky.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:40
@@ -148,6 +182,8 @@ msgid ""
 "\\textbf{Additional Bonus:} Search (2) the Artifact Deck\n"
 "\n"
 msgstr ""
+"\\textbf{Dodatečný Bonus:} Hledej (2) v Balíčku Artefaktů\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:42 coops/titans_stronghold.tex:43
@@ -157,6 +193,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Mapy}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:71
@@ -165,6 +203,8 @@ msgid ""
 "Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
 "\n"
 msgstr ""
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:50
@@ -177,6 +217,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{2 × Startovní (I) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item Startovní Dílky vašich vybraných Frakcí\n"
+"  \\item Ignorujte jejich žluté okraje\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:52
@@ -185,6 +231,8 @@ msgid ""
 "\\textbf{4 × Far (II--III) Map tile}\n"
 "\n"
 msgstr ""
+"\\textbf{4 × Vzdálený (II--III) Dílek Mapy}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:57
@@ -196,6 +244,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{4 × Blízký (IV--V) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item Všechny Blízké Dílky Mapy musí obsahovat Obelisky\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:59 coops/titans_stronghold.tex:62
@@ -207,6 +260,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Podmínky Vítězství}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:61
@@ -215,6 +270,8 @@ msgid ""
 "Defeat all invading armies.\n"
 "\n"
 msgstr ""
+"Porážka všech invazivních armád.\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:63 coops/titans_stronghold.tex:66
@@ -226,6 +283,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Podmínky Porážky}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:65
@@ -234,6 +293,8 @@ msgid ""
 "An undefeated enemy army remains at the end of Round 12.\n"
 "\n"
 msgstr ""
+"Na konci 12. kola stále existuje neporažená nepřátelská armáda.\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:67
@@ -242,6 +303,8 @@ msgid ""
 "One of your towns is captured, or a main hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
+"Jedno z vašich Měst je dobyto, nebo hlavní Hrdina je poražen v bitvě (ústup se nepočítá).\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:69 coops/titans_stronghold.tex:70
@@ -268,6 +331,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{6. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Odstraňte všechny Černé Kostičky ze všech Větrných Mlýnů, Vodních Mol a Mystických Zahrad na mapě.\n"
+"  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:80
@@ -279,6 +348,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{7. a 8. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:85
@@ -290,6 +364,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\columnbreak\n"
+"\\textbf{9. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Opakujte Časované Události ze 6. kola.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:91
@@ -302,6 +382,12 @@ msgid ""
 "\\vspace{-0.5em}\n"
 "\n"
 msgstr ""
+"\\textbf{10. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Opakujte Časované Události ze 7. a 8. kola.\n"
+"\\end{itemize}\n"
+"\\vspace{-0.5em}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:93 clash/the_hunt.tex:74
@@ -310,6 +396,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:104
@@ -327,6 +415,17 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Hráči mohou obchodovat se surovinami, když jeden z Hrdinů aktivního hráče navštíví Tržiště nebo stojí na poli sousedícím se spojeneckým Hrdinou.\n"
+"  \\item Hrdina, který porazí nepřátelskou armádu, získá 2 \\svg{experience}.\n"
+"    Vítězný hráč hodí dvěma Kostkami Pokladu a vyřeší jednu z nich.\n"
+"  \\item Navíc žádný hráč nemůže:\n"
+"  \\begin{itemize}\n"
+"      \\item Útočit na jiné Hrdiny.\n"
+"      \\item Zmocnit se Dolu nebo Osady, která je již Obsazena.\n"
+"  \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:106
@@ -335,6 +434,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Enemy Spawning\\\\and Movement}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Vyvolávaní Nepřátel\\\\a Pohyb}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:126
@@ -361,6 +462,26 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Nepřátelské armády se objevují na náhodném poli s Obeliskem (použijte miniatury Hrdinů z frakcí, které nejsou ve hře).\n"
+"  \\item Určete pole s Obeliskem tím, že hodíte 2 Kostkami Útoku. Aplikujte výsledky následujícím způsobem (K1/K2), při 0 hážete znovu:\n"
+"  \\begin{itemize}\n"
+"    \\item $+1$/$+1$ = Sever\n"
+"    \\item $+1$/$-1$ = Východ\n"
+"    \\item $-1$/$+1$ = Západ\n"
+"    \\item $-1$/$-1$ = Jih\n"
+"  \\end{itemize}\n"
+"  \\item V 7. a 9. kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího kola.\n"
+"  Kola 8 a 10 jsou zcela náhodná.\n"
+"  \\item Pokud dílek, kde se má nepřítel objevit, ještě nebyl objeven, otočte jej a libovolně orientujte.\n"
+"  \\item Pokud je na poli, kde se nepřítel objeví, Hrdina, začne okamžitě boj.\n"
+"  \\item Nepřátelské armády se pohybují na konci každého tahu, počínaje tahem, kdy se objevily.\n"
+"  \\item Nepřátelské armády mají 3 MP za kolo.\n"
+"  \\item Nepřátelské armády se pohybují, jak je popsáno v pravidlech (str.\\,33), ale místo obsazování ničí vše, co jim stojí v cestě.\n"
+"    Umístěte černé kostky na jakékoliv pole, kterým projdou, a od toho okamžiku považujte tato pole za prázdná.\n"
+"  \\item Pokud by se nepřátelský pohyb mohl ubírat různými směry, hráči rozhodnou, kterým směrem půjdou.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:128
@@ -369,6 +490,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Boj s Nepřátelskými\\\\Armádami}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:136
@@ -383,6 +506,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Boj s nepřátelskými armádami přes více než jedno bojové kolo nestojí žádné Body Pohybu.\n"
+"  \\item Během bitvy s nepřátelskou armádou může Hrdina ustoupit kdykoliv, když se má Aktivovat přátelská Jednotka.\n"
+"    Ustupující hlavní Hrdina ztrácí všechny zbývající Body Pohybu a je vrácen do spojeneckého Města nebo Osady dle svého výběru, přičemž si ponechává všechny zbývající Jednotky.\n"
+"  \\item Ustupující sekundární Hrdinové jsou Odstraněni ze hry, ale jejich zbývající Jednotky jsou ponechány.\n"
+"  \\item Zabité nepřátelské Jednotky se znovu neobjevují.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:138
@@ -391,6 +522,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Boss Army}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Armáda Bosse}}\n"
+"\n"
 
 #. type: multicols
 #: coops/sentinels.tex:145
@@ -404,6 +537,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item V 10. kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (posilovací fond = číslo v závorkách v tabulce níže).\n"
+"  \\item Na začátku 2. kola Boje a každého následujícího kola posilují zbývající armádu 2 jednotky z promíchaného posilovacího fondu (až do maxima 5 jednotek), aby pokračovaly v boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských jednotek na začátku kola 1 nebo nižší, doplňte až do celkového počtu 4 jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
+"  \\item Umístěte posilující jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
+"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 jednotek a tyto Jednotky si vezme jako výchozí do dalšího Boje.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:147 clash/the_hunt.tex:43
@@ -433,6 +573,9 @@ msgid ""
 "  \\centering\n"
 "  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (14, 6) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
 
 #. type: Plain text
 #: coops/sentinels.tex:194
@@ -460,6 +603,28 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Síla Nepřátelských Armád}\\"
+"\\ \\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
+"\\newcommand{\\silver}[0]{\\svgunit[12]{silver}} \\newcommand{\\golden}[0]"
+"{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]{\\svgunit[12]{azure}} "
+"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Kola 6 + "
+"7} & \\darkcell{Kola 8 + 9} & \\darkcell{Kolo 10}\\\\ \\darkcell[1.4]{Lehká} "
+"& \\lightcell[1.4]{\\bronze \\silver \\silver \\silver \\golden} & "
+"\\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} & "
+"\\lightcell[1.4]{\\silver \\silver \\golden \\azure \\footref{azure} "
+"\\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\\\ \\darkcell[1.4]"
+"{Normální} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} "
+"& \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\golden \\golden \\azure \\footref{azure} "
+"\\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Težká} & "
+"\\lightcell[1.4]{\\silver \\silver \\golden \\golden \\golden} & "
+"\\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
+"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]{Nemožná} & "
+"\\lightcell[1.4]{\\silver \\golden \\golden \\golden \\golden} & "
+"\\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
+"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:197
@@ -467,3 +632,5 @@ msgid ""
 "Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
+"Vždy 1 jednotka Azurových Draků (výchozí jednotky Armády Bosse). Zbytek je "
+"náhodný\\label{azure}."
