Experience as glyph

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -87,7 +87,7 @@ During this scenario:
     Please refer to the encounter rules specified in the rules of the selected Dragon Boss.
   \item While fighting a Dragon Boss, ignore Gorgon's special ability.
   \item Heroes are unable to retreat from battles with the Dragon Boss.
-  \item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 Experience Point.
+  \item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 \svg{experience}.
   \item Players can visit each Obelisk only once.
     Afterwards, they must place their Faction cube on the field.
   \item In the boss encounter, there is no battle round limit.
