--- a/translations/the_hunt.tex/the_hunt.tex.pot
+++ b/translations/the_hunt.tex/the_hunt.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-16 16:00+0200\n"
+"POT-Creation-Date: 2024-07-21 12:57+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -274,7 +274,7 @@ msgid ""
 "    Please refer to the encounter rules specified in the rules of the selected Dragon Boss.\n"
 "  \\item While fighting a Dragon Boss, ignore Gorgon's special ability.\n"
 "  \\item Heroes are unable to retreat from battles with the Dragon Boss.\n"
-"  \\item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 Experience Point.\n"
+"  \\item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 \\svg{experience}.\n"
 "  \\item Players can visit each Obelisk only once.\n"
 "    Afterwards, they must place their Faction cube on the field.\n"
 "  \\item In the boss encounter, there is no battle round limit.\n"
