--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -333,7 +333,7 @@ msgid ""
 msgstr ""
 "\\textbf{6. kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Odstraňte všechny Černé Kostičky ze všech Větrných Mlýnů, Vodních Mol a Mystických Zahrad na mapě.\n"
+"  \\item Odstraňte všechny Černé Kostičky ze všech Větrných Mlýnů, Vodních Kol a Mystických Zahrad na mapě.\n"
 "  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
 "\\end{itemize}\n"
 "\n"
