--- a/translations/the_hunt.tex/the_hunt.tex.pot
+++ b/translations/the_hunt.tex/the_hunt.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-21 12:57+0200\n"
+"POT-Creation-Date: 2024-07-21 23:19+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -384,7 +384,7 @@ msgid ""
 "Golem per turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
 "their cards.  They primarily serve as fodder for the Crystal Dragon's health "
-"regeneration.  \\item The Crystal Dragon \\textit{counterattacks twice} per "
+"regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
 "battle round.  \\end{itemize} }"
 msgstr ""
 
@@ -402,9 +402,9 @@ msgid ""
 "\\textbf{Impossible}}\\\\ \\lightcell[2.8]{No additional\\\\changes} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 22} & \\lightcell[2.8]{{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Counterattack}} "
-"& \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
-"{\\images/hp.png}} 32 \\\\ +1 Counterattack \\\\ Remove additional 2 "
+"{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} & "
+"\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 "
 "\\svg{damage-table} by consuming Golems} \\\\ \\end{tabularx} }"
 msgstr ""
 
