--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -208,7 +208,7 @@ During this scenario:
       \end{itemize}
     \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their cards.
       They primarily serve as fodder for the Crystal Dragon's health regeneration.
-    \item The Crystal Dragon \textit{counterattacks twice} per battle round.
+    \item The Crystal Dragon \textit{retaliates twice} per battle round.
   \end{itemize}
 }
 
@@ -230,8 +230,8 @@ During this scenario:
   \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
   \lightcell[2.8]{No additional\\changes} &
   \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
-  \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Counterattack}} &
-  \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Counterattack  \\ Remove additional 2 \svg{damage-table} by consuming Golems} \\
+  \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Retaliation}} &
+  \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Retaliation  \\ Remove additional 2 \svg{damage-table} by consuming Golems} \\
   \end{tabularx}
 }
 
